Made the jars work. Made the docs be up to date. Provided a readme with all necessary information and especially the instruuctions for java fx (#81)
* added docs dir

* added job for exporting docs

* adapted maven according to javadocs.yml

* deleted jars. adapted build.yml (Squashing whole all commits at once after having to soft reset)

* added dependency management into the pom.xml. Now checking all dependencies in the project structure)

* Dependency management. Added dependency management to pom.xml and also canceled the dependencies for java 11 in the project structure and got org.openjavafx:javafx-base:17.0.6

* Dependency management. Added dependency management to pom.xml and also canceled the dependencies for java 11 in the project structure and got org.openjavafx:javafx-base:17.0.6

* made the jars work. Made the constrict work. added readme